add regex video link

--- a/pages/event-schedule.html
+++ b/pages/event-schedule.html
@@ -35,8 +35,8 @@
     <td>Video workshops:<br/>
     <div class="offset-sm-1">
      <em>Collaborating with Git and GitHub</em> [<a href="https://vickysteeves.gitlab.io/collaborating-with-git/introduction-to-git.html">materials</a>] [<a href="https://stream.nyu.edu/media/Collaborating+with+Git+and+GitHub/1_4t0xxmr2">video</a>]<br/>
-     <em>Getting started with Jupyter + JupyterHub</em> [<!--<a href="">-->materials<!-- </a> -->] [<!--<a href="">-->video<!-- </a> -->]<br/>
-     <em>Understanding Regular Expressions (Regex)</em>[<!--<a href="">-->materials<!-- </a> -->] [<!--<a href="">-->video<!-- </a> -->]
+     <!--<em>Getting started with Jupyter + JupyterHub</em> [<a href="">materials</a>] [<a href="">video</a>]<br/> -->
+     <em>Understanding Regular Expressions (Regex)</em> [<a href="https://librarycarpentry.org/lc-data-intro/">materials</a>] [<a href="https://stream.nyu.edu/media/Understanding+Regular+Expressions/1_wzpt1qyu">video</a>]
      </div>
     </td>
   </tr>
