add direct download link

--- a/pages/tracks.html
+++ b/pages/tracks.html
@@ -11,7 +11,7 @@
 
     <p>To choose a track for your team, submit your choice here by Saturday the 6th at 4pm EST: <a href="https://forms.gle/3jGYuxJbpvzbJdoWA">https://forms.gle/3jGYuxJbpvzbJdoWA</a><strong>. The choice is final, so think it over as a team before submitting!</strong></p>
     
-    <p>In addition to the information below, full information about all three tracks are available here (requires NYU login): <a href="https://docs.google.com/document/d/e/2PACX-1vS1-LZisvTjE7qKXcrUZaw84BN84IDR9cNILyL9GU_-4lRE-er6wL_ItQ_AmQ74DNYdX2eY0fZtxcYR/pub">https://docs.google.com/document/d/e/2PACX-1vS1-LZisvTjE7qKXcrUZaw84BN84IDR9cNILyL9GU_-4lRE-er6wL_ItQ_AmQ74DNYdX2eY0fZtxcYR/pub</a></p>
+    <p>In addition to the information below, full information about all three tracks are available here (requires NYU login): <a href="https://docs.google.com/document/d/e/2PACX-1vS1-LZisvTjE7qKXcrUZaw84BN84IDR9cNILyL9GU_-4lRE-er6wL_ItQ_AmQ74DNYdX2eY0fZtxcYR/pub">https://docs.google.com/document/d/e/2PACX-1vS1-LZisvTjE7qKXcrUZaw84BN84IDR9cNILyL9GU_-4lRE-er6wL_ItQ_AmQ74DNYdX2eY0fZtxcYR/pub</a> [<a href="https://docs.google.com/document/export?format=pdf&id=1esyqjGGfrDl9Ylg9NSCmP9TenzrniNpitnFWN0yxufY">direct download</a>].</p>
 
     <div class="row">
         <div class="col-4">
